fixed the text alignment

--- a/src/styles/components/ChartChallenge.module.css
+++ b/src/styles/components/ChartChallenge.module.css
@@ -91,6 +91,8 @@
    padding: 1.5rem;
    display: grid;
    justify-content: center;
+
+   text-align: center;
  
 }.challengesReport h5 svg {
    font-size: 2rem;
